fixed overflow error

--- a/_main-rules.scss
+++ b/_main-rules.scss
@@ -139,6 +139,10 @@ h1 {
 EXTRA STUFF
 **************/
 //Progress Bar
+
+.container{
+    overflow: hidden;
+}
 progress {
     background-color: red;
     height: 1em;
