--- a/style/resume.scss
+++ b/style/resume.scss
@@ -62,12 +62,8 @@ ABOUT ME
 ----------------*/
 
 .intro {
+    @extend .flex-stuff;
     background-color: $mainColor;
-    padding: 2em 7em;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
     flex-direction: row-reverse;
     margin-left: -3em;
     img {
@@ -112,11 +108,11 @@ TIMELINE
 
 .timeline {
     margin-top: -2em 0;
-    padding: 2em;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
+    @extend .flex-stuff;
     @include MQ(M) {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
         position: relative;
         max-width: $M;
         margin: 0 auto;
@@ -148,9 +144,9 @@ TIMELINE
 
 .block {
     margin: 1% 0;
-    flex: 0 0 45%;
     position: relative;
     @include MQ(M) {
+        flex: 0 0 45%;
         &:first-child {
             margin: -7px 0;
         }
@@ -211,7 +207,6 @@ SKILLS
     @extend .flex-stuff;
     background-color: $mainColor;
     font-family: 'Montserrat', sans-serif;
-
     h1 {
         color: #fff;
     }
